# microservice_app

./: .gitignore  README.md  docker-compose.yml
api_gateway/: nginx.conf
auth_service/: pyproject.toml
auth_service/src/: config.py  crud.py  database.py  jwt.py  logger.py  main.py  models.py  newrelic.ini  schemas.py
coordinator_service/: Dockerfile  pyproject.toml
coordinator_service/src/: config.py  main.py  newrelic.ini
inventory_service/: pyproject.toml
inventory_service/src/: consumer.py  models.py  newrelic.ini
product_service/: .gitignore  Dockerfile  pyproject.toml
product_service/src/: config.py  consumer.py  main.py  models.py  newrelic.ini
scripts/: gen-certs.sh
scripts/db/: db-setup.sh
